...
                        stringResource(R.string.everyone),
                        visibility == PlanVisibility.EVERYONE
                    ) { visibility = PlanVisibility.EVERYONE }
                    VisibilityOption(
                        stringResource(R.string.everyone_except_label),
                        visibility == PlanVisibility.EXCEPT,
                        Modifier.testTag("visibility_except")
                    ) { visibility = PlanVisibility.EXCEPT }
                    AnimatedVisibility(visible = visibility == PlanVisibility.EXCEPT) {
                        FriendSelector(
                            friends,
                            circles,
                            exceptFriendIds,
...
                            { exceptFriendIds = friends.map { it.uid } },
                            { exceptFriendIds = emptyList() })
                    }
                    VisibilityOption(
                        stringResource(R.string.only_selected_people_label),
                        visibility == PlanVisibility.ONLY,
                        Modifier.testTag("visibility_only")
                    ) { visibility = PlanVisibility.ONLY }
                    AnimatedVisibility(visible = visibility == PlanVisibility.ONLY) {
                        FriendSelector(
                            friends,
                            circles,
                            onlyFriendIds,
...
                                note,
                                visibility,
                                currentSelectedIds
                            )
                        }
                    },
                    modifier = Modifier.testTag("plan_dialog_confirm_button"),
                    enabled = isConfirmEnabled
                ) {
                    Text(
                        if (editingPlan == null) stringResource(R.string.button_add)
                        else stringResource(R.string.button_update)
                    )
...
        ) {
            Text(
                text = stringResource(R.string.unselect_all),
                style = MaterialTheme.typography.labelSmall,
                color = MaterialTheme.colorScheme.primary,
                modifier = Modifier
                    .testTag("unselect_all")
                    .clickable { onUnselectAll() }
            )
            Spacer(modifier = Modifier.width(12.dp))
            Text(
                text = stringResource(R.string.select_all),
                style = MaterialTheme.typography.labelSmall,
                color = MaterialTheme.colorScheme.primary,
                modifier = Modifier
                    .testTag("select_all")
                    .clickable { onSelectAll() }
            )
        }
    }
}

...
