...
            value = firstName,
            onValueChange = onFirstNameChange,
            labelText = stringResource(R.string.label_first_name_required),
            icon = Icons.Default.AccountCircle,
            modifier = Modifier
                .fillMaxWidth()
                .testTag("first_name_field"),
            enabled = !isLoading,
            keyboardOptions = KeyboardOptions(
                capitalization = KeyboardCapitalization.Words,
                imeAction = ImeAction.Next
            ),
            keyboardActions = KeyboardActions(
...
            value = lastName,
            onValueChange = onLastNameChange,
            labelText = stringResource(R.string.label_last_name_required),
            icon = Icons.Default.AccountCircle,
            modifier = Modifier
                .fillMaxWidth()
                .testTag("last_name_field"),
            enabled = !isLoading,
            keyboardOptions = KeyboardOptions(
                capitalization = KeyboardCapitalization.Words,
                imeAction = ImeAction.Next
            ),
            keyboardActions = KeyboardActions(
...
            onValueChange = onBioChange,
            labelText = stringResource(R.string.label_bio),
            placeholderText = stringResource(R.string.text_bio_placeholder),
            icon = Icons.AutoMirrored.Filled.Notes,
            modifier = Modifier
                .fillMaxWidth()
                .testTag("bio_field"),
            minLines = 1,
            maxLines = 5,
            enabled = !isLoading,
            keyboardOptions = KeyboardOptions(
                capitalization = KeyboardCapitalization.Sentences,
                imeAction = ImeAction.Next
...
